@@ -911,7 +911,8 @@
 "兂","⿱？乚",0,0,G
 "元","⿱二儿",0,0,G
 "兄","⿱口儿",0,0,G
-"充","⿱亠允",0,0,G
+"充","⿻一允",0,0,G
+"充","⿱亠允",1,0,G
 "兆","⿻儿？",0,0,G
 "兇","⿱凶儿",0,0,G
 "先","⿱？儿",0,0,G
@@ -919,7 +920,8 @@
 "兊","⿱公儿",0,0,G
 "克","⿱古儿",0,0,G
 "兌","⿱？儿",0,0,G
-"免","⿱⺈⿻口儿",0,0,O
+"免","⿱⺈⿻⿻口⼁儿",0,0,O
+"免","⿱⺈⿻口儿",1,0,O
 "兎","⿱丿⿻⿻口儿丶",0,0,O
 "兏","⿸厂⿱上儿",0,0,G
 "児","⿱旧儿",0,0,G
@@ -1420,14 +1422,15 @@
 "匵","⿷匚賣",0,0,G
 "匶","⿷匚舊",0,0,G
 "匷","⿷匚瞿",0,0,G
-"匹","⿷匚儿",0,0,G
-"区","⿷匚乂",0,0,G
-"医","⿷匚矢",0,0,G
-"匼","⿷匚合",0,0,G
-"匽","⿰匚妟",0,0,G
-"匾","⿷匚扁",0,0,G
-"匿","⿷匚若",0,0,G
-"區","⿷匚品",0,0,G
+"匹","⿷⼖儿",0,0,G
+"匹","⿷⼖儿[1]",1,0,G
+"区","⿷⼖乂",0,0,G
+"医","⿷⼖矢",0,0,G
+"匼","⿷⼖合",0,0,G
+"匽","⿷⼖妟",0,0,G
+"匾","⿷⼖扁",0,0,G
+"匿","⿷⼖若",0,0,G
+"區","⿷⼖品",0,0,G
 "十","⿻一丨",0,0,G
 "卂","⿹？十",0,0,G
 "千","⿻十？",0,0,G
@@ -2357,7 +2360,7 @@
 "囘","⿵冂巳",0,0,G
 "囙","⿴囗？",0,0,G
 "囚","⿴囗人",0,0,G
-"四","⿴囗儿",0,0,G
+"四","⿴囗儿[1]",0,0,G
 "囜","⿴囗厶",0,0,G
 "囝","⿴囗子",0,0,G
 "回","⿴囗口",0,0,G
@@ -7743,8 +7746,7 @@
 "殰","⿰歹賣",0,0,G
 "殱","⿰歹韯",0,0,G
 "殲","⿰歹韱",0,0,G
-"殳","⿱几又",0,0,G
-"殳","⿱几[1]又",0,1,O
+"殳","⿱几[1]又",0,0,O
 "殴","⿰区殳",0,0,G
 "段","⿰？殳",0,0,G
 "殶","⿰主殳",0,0,G
@@ -8014,7 +8016,6 @@
 "沽","⿰氵古",0,0,G
 "沾","⿰氵占",0,0,G
 "沿","⿰⺡⿱几[1]口",0,0,O
-"沿","⿰氵⿱几口",0,1,G
 "泀","⿰氵司",0,0,G
 "況","⿰氵兄",0,0,G
 "泂","⿰氵冋",0,0,G
@@ -11243,6 +11244,7 @@
 "礿","⿰礻勺",0,0,G
 "祀","⿰礻巳",0,0,G
 "祁","⿰礻阝",0,0,G
+"祁","⿰礻阝[1]",1,0,G
 "祂","⿰礻也",0,0,G
 "祃","⿰礻马",0,0,G
 "祄","⿰礻介",0,0,G
@@ -13037,6 +13039,7 @@
 "耴","⿰耳乚",0,0,G
 "耵","⿰耳丁",0,0,G
 "耶","⿰耳阝",0,0,G
+"耶","⿰耳阝[1]",1,0,G
 "耷","⿱大耳",0,0,G
 "耸","⿱从耳",0,0,G
 "耹","⿰耳今",0,0,G
@@ -13565,8 +13568,7 @@
 "舶","⿰舟白",0,0,G
 "舷","⿰舟玄",0,0,G
 "舸","⿰舟可",0,0,G
-"船","⿰舟⿱几口",0,0,G
-"船","⿰舟⿱几[1]口",0,1,O
+"船","⿰舟⿱几[1]口",0,0,O
 "舺","⿰舟甲",0,0,G
 "舻","⿰舟卢",0,0,G
 "舼","⿰舟共",0,0,G
@@ -14061,6 +14063,7 @@
 "萦","⿱⺿⿱冖糸",0,0,O
 "萧","⿱⺿肃",0,0,O
 "萨","⿱⺿⿰阝产",0,0,O
+"萨","⿱⺿⿰阝[1]产",1,0,O
 "萩","⿱⺿秋",0,0,O
 "萪","⿱⺿科",0,0,O
 "萫","⿱⺿香",0,0,O
@@ -15587,7 +15590,7 @@
 "訕","⿰訁山",0,1,O
 "訖","⿰言乞",0,0,G
 "託","⿰言乇",0,0,G
-"記","⿰言几",0,0,G
+"記","⿰言己",0,0,G
 "訙","⿰言丸",0,0,G
 "訚","⿵门言",0,0,G
 "訛","⿰言化",0,0,G
@@ -17257,12 +17260,17 @@
 "邑","⿱口巴",0,0,GO
 "邒","⿰丁阝",0,0,G
 "邓","⿰又阝",0,0,G
+"邓","⿰又阝[1]",1,0,G
 "邔","⿰己阝",0,0,G
+"邔","⿰己阝[1]",1,0,G
 "邕","⿱巛邑",0,0,G
 "邖","⿰山阝",0,0,G
 "邗","⿰干阝",0,0,G
+"邗","⿰干阝[1]",1,0,G
 "邘","⿰于阝",0,0,G
+"邘","⿰于阝[1]",1,0,G
 "邙","⿰亡阝",0,0,G
+"邙","⿰亡阝[1]",1,0,G
 "邚","⿰女阝",0,0,G
 "邛","⿰工阝",0,0,G
 "邜","⿰夕阝",0,0,G
@@ -17717,7 +17725,7 @@
 "鉘","⿰釒弗",0,0,G
 "鉙","⿰釒只",0,0,G
 "鉚","⿰釒卯",0,0,G
-"鉛","⿰釒⿱几口",0,0,G
+"鉛","⿰釒⿱几[1]口",0,0,G
 "鉜","⿰釒付",0,0,G
 "鉝","⿰釒立",0,0,G
 "鉞","⿰釒戉",0,0,G
@@ -18336,7 +18344,7 @@
 "铂","⿰钅白",0,0,G
 "铃","⿰钅令",0,0,G
 "铄","⿰钅乐",0,0,G
-"铅","⿰钅⿱几口",0,0,G
+"铅","⿰钅⿱几[1]口",0,0,G
 "铆","⿰钅卯",0,0,G
 "铇","⿰钅包",0,0,G
 "铈","⿰钅市",0,0,G
@@ -18682,7 +18690,9 @@
 "阜","⿱？十",0,0,G
 "阝","⿻丨？",0,0,G
 "阞","⿰阝力",0,0,G
+"阞","⿰阝[1]力",1,0,G
 "队","⿰阝人",0,0,G
+"队","⿰阝[1]人",1,0,G
 "阠","⿰阝卂",0,0,G
 "阡","⿰阝千",0,0,G
 "阢","⿰阝兀",0,0,G
