@@ -22,6 +22,10 @@
 # ChineseCharacter, Glyph, Locale
 "⻏",0,T
 "⻏",1,CJK
+"阝",0,T
+"阝",1,CJK
+"⻖",0,T
+"⻖",1,CJK
 "⻝",1,CJK
 "⻝",0,T
 "⾷",1,CJK
@@ -37,3 +41,23 @@
 "充",1,CJ
 "免",0,TJ
 "免",1,C
+"祁",0,T
+"祁",1,C
+"耶",0,T
+"耶",1,C
+"萨",0,T
+"萨",1,C
+"邓",0,T
+"邓",1,C
+"邔",0,T
+"邔",1,C
+"邗",0,T
+"邗",1,C
+"邘",0,T
+"邘",1,C
+"邙",0,T
+"邙",1,C
+"阞",0,T
+"阞",1,C
+"队",0,T
+"队",1,C
